Added two new Themes

--- a/src/Themes/MonokaiDark.json5
+++ b/src/Themes/MonokaiDark.json5
@@ -12,7 +12,7 @@
     BuiltinType: 0x51C4D3,
     Type: 0x51C4D3,
     Variable: 0xFC8C23,
-    Function: 0x158BB8,
+    Function: 0x96C24E,
     Keyword: 0xD2568C,
     Preprocessor: 0xD2357D,
 }
