--- a/src/Themes/MonokaiLight.json5
+++ b/src/Themes/MonokaiLight.json5
@@ -12,7 +12,7 @@
     BuiltinType: 0x51C4D3,
     Type: 0x51C4D3,
     Variable: 0xFC8C23,
-    Function: 0x158BB8,
+    Function: 0x96C24E,
     Keyword: 0x9B1E64,
     Preprocessor: 0xEE3F4D,
 }
