Added two new Themes

--- a/src/Themes/MonokaiLight.json5
+++ b/src/Themes/MonokaiLight.json5
@@ -4,11 +4,11 @@
     Foreground: 0x2B312C,
     Text: 0x373834,
     Comment: 0x617172,
-    CommentEscape:0xD276A3,
+    CommentEscape:0x51C4D3,
     String: 0xFCCB16,
     StringEscape: 0x96C24E,
-    Number: 0xFECC11,
-    Boolean: 0xFECC11,
+    Number: 0x983680,
+    Boolean: 0x983680,
     BuiltinType: 0x51C4D3,
     Type: 0x51C4D3,
     Variable: 0xFC8C23,
