--- a/src/Themes/MonokaiDark.json5
+++ b/src/Themes/MonokaiDark.json5
@@ -4,11 +4,11 @@
     Foreground: 0xF9F1DB,
     Text: 0xE4DFD7,
     Comment: 0x617172,
-    CommentEscape:0xD276A3,
+    CommentEscape:0x51C4D3,
     String: 0xF9D367,
     StringEscape: 0x96C24E,
-    Number: 0xFECC11,
-    Boolean: 0xFECC11,
+    Number: 0x983680,
+    Boolean: 0x983680,
     BuiltinType: 0x51C4D3,
     Type: 0x51C4D3,
     Variable: 0xFC8C23,
