Added two new Themes

--- a/src/Themes/MonokaiDark.json5
+++ b/src/Themes/MonokaiDark.json5
@@ -7,8 +7,8 @@
     CommentEscape:0x51C4D3,
     String: 0xF9D367,
     StringEscape: 0x96C24E,
-    Number: 0x983680,
-    Boolean: 0x983680,
+    Number: 0xA35C8F,
+    Boolean: 0xA35C8F,
     BuiltinType: 0x51C4D3,
     Type: 0x51C4D3,
     Variable: 0xFC8C23,
